<resources>
    <string name="app_name">Navigation Drawer Example</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1">Map</string>
    <string name="tab_2">Data</string>
    <string name="tab_3">Info</string>
    <string name="map">Карта</string>
    <string name="list">Список</string>
    <string name="location_info">Информация о локации</string>
    <string name="send">Отправить</string>
    <string name="share">Поделиться</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">User name</string>
    <string name="nav_header_subtitle">mail@google.com</string>
    <string name="hide_location_marker">Hide Location Marker</string>
    <string name="show_location_marker">Show Location Marker</string>
    <string name="location_data_info">latitude = %1$.2f\nlongitude = %2$.2f\nspeed = %3$.2f m/s\ndistance = %4$.2f m.</string>

</resources>